Fix: add overflow hidden for page 1 to hide the contact button

--- a/public/styles/site/_main-layout.scss
+++ b/public/styles/site/_main-layout.scss
@@ -16,6 +16,10 @@
 */
 
 
+.page1 {
+  overflow:hidden;
+}
+
 .page1, h1, h2, h3, h4, h5, p {
   font-family: 'Source Sans Pro', sans-serif;
 }
